<resources>
    <string name="app_name">PhonebookManager</string>
    <string name="description">Description</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="call_with_diffrent_media">Call with diffrent media</string>
    <string name="contact_name">Contact name</string>
    <string name="call">Call</string>
    <string name="massage">Massage</string>
    <string name="send_mail">Send mail</string>
    <string name="tanvirhasan553_gmail_com">tanvirhasan553@gmail.com</string>
    <string name="_8801781998168">+8801781998168</string>
    <string name="phone_number_digit">Phone number</string>
    <string name="user_information">User information</string>
</resources>
