<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdateDataActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5348E8">
        <Button
            android:id="@+id/cancelBtOnUpdate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:background="#5348E8"/>
        <Button
            android:id="@+id/updateButtonId"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:background="#5348E8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/nameEtOnUpdate"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/name"
            android:background="@drawable/listview_border"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/phoneNumberEtOnUpdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/phone_number"
            android:background="@drawable/listview_border"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/emailEtonUpdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Email Address"
            android:background="@drawable/listview_border"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/descriptionEtOnUpdate"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/listview_border"
            android:hint="@string/description"
            android:gravity="left|start"/>
    </LinearLayout>

</LinearLayout>